--- a/src/views/Register/Register.css
+++ b/src/views/Register/Register.css
@@ -1,3 +1,26 @@
+.register {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    width: 100vw;
+    height: 80vh;
+    background-image: url('../../assets/sda-oil-abs-29522-copy.webp');
+    background-size: cover;
+    background-position-x: center;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.register-darker {
+    background: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
 .text input {
     color: black;
     background-color: white;
