--- a/src/views/Register/Register.css
+++ b/src/views/Register/Register.css
@@ -3,10 +3,10 @@
     text-align: center;
     width: 100vw;
     height: 80vh;
-    background-image: url('../../assets/sda-oil-abs-29522-copy.webp');
+    background-image: url('../../assets/2952px-Pieter_Bruegel_the_Elder_-_The_Tower_of_Babel_(Vienna)_-_Google_Art_Project_-_edited.jpg');
     background-size: cover;
-    background-position-x: center;
-    background-position: center;
+    background-position-y: 0%;
+    background-position-x: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,7 +15,7 @@
 }
 
 .register-darker {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.4);
     width: 100%;
     height: 100%;
     padding: 0;
