Add validations for registration

--- a/src/views/LandingPage/LandingPage.css
+++ b/src/views/LandingPage/LandingPage.css
@@ -13,11 +13,17 @@
     color: white;
 }
 
-.landing-page-darker {
+.containerDarker {
     background: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100%;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
 }
 
 .text {
