--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,10 +12,18 @@
 .navigation {
     padding-left: 30px;
     gap: 30px;
+    display: flex;
+    gap: 20px;
 }
 
-.login-register {
+.loginRegister {
     display: flex;
     gap: 30px;
     padding-right: 30px;
+}
+
+.button {
+  background-color: white;
+  color: black;
+  border: 0;
 }
